SF-2218 Fix audio player covering scripture scrollbar (#2026)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/text-chooser-dialog/text-chooser-dialog.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/text-chooser-dialog/text-chooser-dialog.component.scss
@@ -46,7 +46,7 @@ app-text {
   font-size: 0.85em;
 }
 
-::ng-deep app-text quill-editor > .ql-container > .ql-editor {
+:host ::ng-deep app-text quill-editor > .ql-container > .ql-editor {
   padding: 0 1em 1em;
   min-height: 300px;
 }
